--- a/rpi3/compose.yaml
+++ b/rpi3/compose.yaml
@@ -47,9 +47,9 @@ services:
 
   emulator:
     image: greenukr/emulator:0.2.0
-    # cpus: "2"
-    # mem_reservation: "512M"
-    # mem_limit: "2048M"
+    cpus: "4"
+    mem_reservation: "2048M"
+    mem_limit: "4096M"
     build:
       context: ./emulator
       dockerfile: Dockerfile.emulator
