--- a/rpi3/.env
+++ b/rpi3/.env
@@ -1,4 +1,5 @@
 IMAGE_URL=https://downloads.raspberrypi.com/raspios_lite_arm64/images/raspios_lite_arm64-2023-05-03/2023-05-03-raspios-bullseye-arm64-lite.img.xz
+# Used in docker-compose. You may set to your username uid/gid for convinience 
 USER_UID=1000
 GROUP_GID=1000
-UGNAME=nonroot
+UG_NAME=nonroot
