--- a/rpi3/compose.yaml
+++ b/rpi3/compose.yaml
@@ -19,6 +19,10 @@ services:
     build:
       context: ./downloader
       dockerfile: Dockerfile.downloader
+      args:
+        - DEFAULT_UID=${USER_UID}
+        - DEFAULT_GID=${GROUP_GID}
+        - DEFAULT_GUNAME=${UG_NAME}
     working_dir: /data
     volumes:
       - data-volume:/data
