--- a/rpi3/compose.yaml
+++ b/rpi3/compose.yaml
@@ -15,14 +15,14 @@ services:
     command: chown -R ${USER_UID}:${GROUP_GID} /data
 
   downloader:
-    image: greenukr/downloader:0.2.0
+    image: greenukr/downloader:0.3.0
     build:
       context: ./downloader
       dockerfile: Dockerfile.downloader
       args:
         - DEFAULT_UID=${USER_UID}
         - DEFAULT_GID=${GROUP_GID}
-        - DEFAULT_GUNAME=${UG_NAME}
+        - DEFAULT_UG_NAME=${UG_NAME}
     working_dir: /data
     volumes:
       - data-volume:/data
@@ -34,7 +34,7 @@ services:
         condition: service_completed_successfully
 
   processor:
-    image: greenukr/processor:0.2.0
+    image: greenukr/processor:0.3.0
     build:
       context: ./processor
       dockerfile: Dockerfile.processor
@@ -50,7 +50,7 @@ services:
         condition: service_completed_successfully
 
   emulator:
-    image: greenukr/emulator:0.2.0
+    image: greenukr/emulator:0.3.0
     cpus: "4"
     mem_reservation: "2048M"
     mem_limit: "4096M"
