--- a/rpi3/downloader/Dockerfile.downloader
+++ b/rpi3/downloader/Dockerfile.downloader
@@ -2,40 +2,34 @@ FROM alpine:3.18.4
 # ARGs will be get from docker-compose build args
 ARG DEFAULT_UID
 ARG DEFAULT_GID
-ARG DEFAULT_UGNAME
+ARG DEFAULT_UG_NAME
 
 ENV USER_UID=${DEFAULT_UID}
 ENV GROUP_GID=${DEFAULT_GID}
-ENV UGNAME=${DEFAULT_UGNAME}
+ENV UG_NAME=${DEFAULT_UG_NAME}
+
+# ENV IMAGE_URL
 
 # Set the working directory
 WORKDIR /data
 
 # Create a new system group and a new system user with the specified UID, GID, and username.
-RUN addgroup --system --gid ${GROUP_GID} ${UGNAME} && \
-    adduser --system --disabled-password --home /home/${UGNAME} \
-    --uid ${USER_UID} --ingroup ${UGNAME} ${UGNAME}
+RUN addgroup --system --gid ${GROUP_GID} ${UG_NAME} && \
+    adduser --system --disabled-password --home /home/${UG_NAME} \
+    --uid ${USER_UID} --ingroup ${UG_NAME} ${UG_NAME}
 
 # Install required tools
 RUN apk update \
  && apk upgrade --no-cache \
  && apk --no-cache add curl=8.4.0-r0
 
-USER ${UGNAME}
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
-# Set the ENTRYPOINT instruction to execute curl at runtime
-ENTRYPOINT [ \
-    "sh", "-c", \
-    "SHA256_URL=${IMAGE_URL}.sha256 \
-    && IMAGENAME=$(basename $IMAGE_URL) \
-    && echo $IMAGENAME \
-    && SHA256=$(basename $SHA256_URL) \
-    && echo $SHA256 \
-    && curl -sSL -# $IMAGE_URL -z $IMAGENAME -o $IMAGENAME \
-    && curl -sSL -# $SHA256_URL -z $SHA256 -o $SHA256 \
-    && sha256sum -c $SHA256 \
-    && exec $@", "--" \
-]
+USER ${UG_NAME}
+
+# Set the ENTRYPOINT instruction to execute download and unzip at runtime
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Placeholder CMD during the build
-CMD ["echo", "Placeholder CMD, should be overridden at runtime"]
+CMD ["/bin/sh", "-c", "ls -la /data"]
