--- a/rpi3/compose.yaml
+++ b/rpi3/compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  change-vol-ownership:
+  chown:
     # We can use any image we want as long as we can chown
     image: alpine:3.18.4
     # Need a user priviliged enough to chown
@@ -29,8 +29,9 @@ services:
     env_file:
       - .env
       - .downloader.env
+    # entrypoint: ["/bin/sh", "-c", "sleep infinity"]
     depends_on:
-      change-vol-ownership:
+      chown:
         condition: service_completed_successfully
 
   processor:
