--- a/rpi3/processor/Dockerfile.processor
+++ b/rpi3/processor/Dockerfile.processor
@@ -1,24 +1,33 @@
 FROM alpine:3.18.4
+# ARGs will be get from docker-compose build args
+ARG DEFAULT_UID
+ARG DEFAULT_GID
+ARG DEFAULT_UG_NAME
 
-ARG USER_UID=1000
-ARG GROUP_GID=1000
-ARG UGNAME=nonroot
+ENV USER_UID=${DEFAULT_UID}
+ENV GROUP_GID=${DEFAULT_GID}
+ENV UG_NAME=${DEFAULT_UG_NAME}
 
+# Set the working directory
 WORKDIR /data
 
 # Create a new system group and a new system user with the specified UID, GID, and username.
-RUN addgroup --system --gid ${GROUP_GID} ${UGNAME}
+RUN addgroup --system --gid ${GROUP_GID} ${UG_NAME} && \
+    adduser --system --disabled-password --home /home/${UG_NAME} \
+    --uid ${USER_UID} --ingroup ${UG_NAME} ${UG_NAME}
 
-RUN adduser --system --disabled-password --home /home/${UGNAME} \
-    --uid ${USER_UID} --ingroup ${UGNAME} ${UGNAME}
-
+# Install required tools
 RUN apk update \
  && apk upgrade --no-cache \
- && apk --no-cache add xz gzip mtools qemu-img
+ && apk --no-cache add file=5.45-r0 mtools qemu-img
 
-COPY entrypoint.processor.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
+COPY entrypoint.processor.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
-USER ${UGNAME}
+USER ${UG_NAME}
 
-ENTRYPOINT ["/entrypoint.sh"]
+# Set the ENTRYPOINT instruction to execute download and unzip at runtime
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+# Placeholder CMD during the build
+CMD ["/bin/sh", "-c", "ls -la /data"]
