--- a/rpi3/.downloader.env
+++ b/rpi3/.downloader.env
@@ -1,2 +1,3 @@
-# It overrides IMAGE_URL from .env
+# This overrides IMAGE_URL from .env
 IMAGE_URL=https://downloads.raspberrypi.com/raspios_lite_arm64/images/raspios_lite_arm64-2023-05-03/2023-05-03-raspios-bullseye-arm64-lite.img.xz
+SD_BASE_NAME="sd_untouched.img"
