--- a/rpi3/docker-compose.yaml
+++ b/rpi3/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     command: chown -R ${USER_UID}:${GROUP_GID} /data
 
   downloader:
-    image: greenukr/downloader:0.3.1
+    image: greenukr/downloader:0.4.0
     build:
       context: ./downloader
       dockerfile: Dockerfile.downloader
@@ -34,7 +34,7 @@ services:
         condition: service_completed_successfully
 
   processor:
-    image: greenukr/processor:0.3.1
+    image: greenukr/processor:0.4.0
     build:
       context: ./processor
       dockerfile: Dockerfile.processor
@@ -49,13 +49,13 @@ services:
       - ./.env
       - ./.downloader.env
       - ./.processor.env
-    entrypoint: ["/bin/sh", "-c", "sleep infinity"]
+    # entrypoint: ["/bin/sh", "-c", "sleep infinity"]
     depends_on:
       downloader:
         condition: service_completed_successfully
 
   emulator:
-    image: greenukr/emulator:0.3.1
+    image: greenukr/emulator:0.4.0
     cpus: "4"
     mem_reservation: "2048M"
     mem_limit: "3072M"
