--- a/rpi3/emulator/Dockerfile.emulator
+++ b/rpi3/emulator/Dockerfile.emulator
@@ -1,23 +1,29 @@
 FROM alpine:3.18.4
+# ARGs will be get from docker-compose build args
+ARG DEFAULT_UID
+ARG DEFAULT_GID
+ARG DEFAULT_UG_NAME
 
-ARG USER_UID=1000
-ARG GROUP_GID=1000
-ARG UGNAME=nonroot
+ENV USER_UID=${DEFAULT_UID}
+ENV GROUP_GID=${DEFAULT_GID}
+ENV UG_NAME=${DEFAULT_UG_NAME}
 
+# Set the working directory
 WORKDIR /data
 
-# Check for the presence of an existing group and user. If either exists, remove them.
-RUN if getent passwd ${USER_UID} >/dev/null; then \
-    deluser $(getent passwd ${USER_UID} | cut -d: -f1); fi
-
-RUN if getent group ${GROUP_GID} >/dev/null; then \
-    delgroup $(getent group ${GROUP_GID} | cut -d: -f1); fi
-
 # Create a new system group and a new system user with the specified UID, GID, and username.
-RUN addgroup --system --gid ${GROUP_GID} ${UGNAME}
+RUN addgroup --system --gid ${GROUP_GID} ${UG_NAME} && \
+    adduser --system --disabled-password --no-create-home \
+    # --home /home/${UG_NAME} \
+    --uid ${USER_UID} --ingroup ${UG_NAME} ${UG_NAME}
 
-RUN adduser --system --disabled-password --home /home/${UGNAME} \
-    --uid ${USER_UID} --ingroup ${UGNAME} ${UGNAME}
+# Install required tools
+RUN apk update \
+ && apk upgrade --no-cache \
+ && apk --no-cache add \
+        qemu-system-aarch64 \
+        iproute2 net-tools lsof \
+ && rm -rf /var/cache/apk/*
 
 # Update the image to the latest packages
 RUN apk update \
