--- a/rpi3/processor/Dockerfile.processor
+++ b/rpi3/processor/Dockerfile.processor
@@ -13,16 +13,20 @@ WORKDIR /data
 
 # Create a new system group and a new system user with the specified UID, GID, and username.
 RUN addgroup --system --gid ${GROUP_GID} ${UG_NAME} && \
-    adduser --system --disabled-password --home /home/${UG_NAME} \
+    adduser --system --disabled-password --no-create-home \
+    # --home /home/${UG_NAME} \
     --uid ${USER_UID} --ingroup ${UG_NAME} ${UG_NAME}
 
 # Install required tools
 RUN apk update \
  && apk upgrade --no-cache \
- && apk --no-cache add file=5.45-r0 mtools=4.0.43-r1 qemu-img=8.0.5-r0
+ && apk --no-cache add \
+        file=5.45-r0 \
+        mtools=4.0.43-r1 \
+        qemu-img=8.0.5-r0 \
+ && rm -rf /var/cache/apk/*
 
 COPY entrypoint.processor.sh /usr/local/bin/entrypoint.sh
-# COPY entrypoint.test.sh /entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 USER ${UG_NAME}
