--- a/rpi3/docker-compose.yaml
+++ b/rpi3/docker-compose.yaml
@@ -56,9 +56,10 @@ services:
 
   emulator:
     image: greenukr/emulator:0.4.0
-    cpus: "4"
-    mem_reservation: "2048M"
-    mem_limit: "3072M"
+    cpu_count: 4
+    mem_reservation: 3072M
+    mem_limit: 4096M
+    shm_size: 2048M
     build:
       context: ./emulator
       dockerfile: Dockerfile.emulator
