--- a/rpi3/.env
+++ b/rpi3/.env
@@ -4,6 +4,9 @@ GROUP_GID=1000
 UG_NAME=nonroot
 # Also may be used as DEFAULT_IMAGE_URL at buld 
 IMAGE_URL=https://downloads.raspberrypi.com/raspios_lite_arm64/images/raspios_lite_arm64-2023-05-03/2023-05-03-raspios-bullseye-arm64-lite.img.xz
-SD_NAME=sd.qcow2
+# SD_NAME=sd.qcow2
+SD_SIZE=8
+SD_NAME=sd.img
 DTB_FILE=bcm2710-rpi-3-b-plus.dtb
 KERNEL_FILE=kernel8.img
+
