--- a/rpi3/docker-compose.yaml
+++ b/rpi3/docker-compose.yaml
@@ -1,21 +1,37 @@
 version: '3.8'
 
 services:
-  chown:
-    # We can use any image we want as long as we can chown
-    image: alpine:3.18.4
+  # build updated Alpine image with nonroot user and chown volume
+  updater:
+    image: greenukr/updater:0.1.0
+    build:
+      context: ./updater
+      dockerfile: Dockerfile.updater
+      args:
+        - DEFAULT_UID=${USER_UID}
+        - DEFAULT_GID=${GROUP_GID}
+        - DEFAULT_UG_NAME=${UG_NAME}
     # Need a user priviliged enough to chown
     user: "root"
-    # Specify the group in question
-    group_add:
-      - ${GROUP_GID}
     volumes:
       # The volume to chown
       - data-volume:/data
     command: chown -R ${USER_UID}:${GROUP_GID} /data
+  # chown:
+  #   # We can use any image we want as long as we can chown
+  #   image: alpine:3.18.4
+  #   # Need a user priviliged enough to chown
+  #   user: "root"
+  #   # Specify the group in question
+  #   group_add:
+  #     - ${GROUP_GID}
+  #   volumes:
+  #     # The volume to chown
+  #     - data-volume:/data
+  #   command: chown -R ${USER_UID}:${GROUP_GID} /data
 
   downloader:
-    image: greenukr/downloader:0.4.0
+    image: greenukr/downloader:0.4.1
     build:
       context: ./downloader
       dockerfile: Dockerfile.downloader
@@ -34,7 +50,7 @@ services:
         condition: service_completed_successfully
 
   processor:
-    image: greenukr/processor:0.4.0
+    image: greenukr/processor:0.4.1
     build:
       context: ./processor
       dockerfile: Dockerfile.processor
@@ -55,7 +71,7 @@ services:
         condition: service_completed_successfully
 
   emulator:
-    image: greenukr/emulator:0.4.0
+    image: greenukr/emulator:0.4.1
     cpu_count: 4
     mem_reservation: 3072M
     mem_limit: 4096M
@@ -75,8 +91,6 @@ services:
     env_file:
       - ./.env
       - ./.processor.env
-    # security-opt:
-    #     - no-new-privileges
     depends_on:
       processor:
         condition: service_completed_successfully
@@ -91,16 +105,16 @@ services:
       -dtb ${DTB_FILE} -kernel ${KERNEL_FILE} -sd ${SD_NAME} 
       -append "rw earlyprintk loglevel=8 console=ttyAMA0,115200 dwc_otg.lpm_enable=0 root=/dev/mmcblk0p2 rootdelay=1" 
       -device usb-net,netdev=net0,mac=02:ca:fe:f0:0d:01 -netdev user,id=net0,hostfwd=tcp::2222-:22
-    # command: >-
-    #   -name rpi3bp -machine raspi3b -cpu cortex-a72 -m 1G -smp 4 -nographic 
-    #   -dtb bcm2710-rpi-3-b-plus.dtb -kernel kernel8.img -sd sd.qcow2 
-    #   -append "rw earlyprintk loglevel=8 console=ttyAMA0,115200 dwc_otg.lpm_enable=0 root=/dev/mmcblk0p2 rootdelay=1" 
-    #   -device usb-net,netdev=net0,mac=02:ca:fe:f0:0d:01 -netdev user,id=net0,hostfwd=tcp::2222-:22
+      -monitor telnet:127.0.0.1:5555,server,nowait
+      -monitor unix:qemu-monitor-socket,server,nowait
+
+    # '-monitor telnet:127.0.0.1:5555,server,nowait' will enable telnet server for monitoring
+    # Use: 'busybox-extras telnet 127.0.0.1 5555' to connect to qemu in container
+    #       'echo system_powerdown |busybox-extras telnet 127.0.0.1 5555
+    # '-monitor unix:qemu-monitor-socket,server,nowait' will enable unix socket server for monitoring 
+    # Use: echo "info status" | socat - unix-connect:qemu-monitor-socket
     # command: ["-version"]
-    restart: "no"
-    # restart: always
-    # restart: on-failure
-    # restart: unless-stopped
+    restart: unless-stopped
 
 volumes:
   data-volume:
