--- a/rpi3/emulator/Dockerfile.emulator
+++ b/rpi3/emulator/Dockerfile.emulator
@@ -1,37 +1,19 @@
-FROM alpine:3.18.4
-# ARGs will be get from docker-compose build args
-ARG DEFAULT_UID
-ARG DEFAULT_GID
-ARG DEFAULT_UG_NAME
-
-ENV USER_UID=${DEFAULT_UID}
-ENV GROUP_GID=${DEFAULT_GID}
-ENV UG_NAME=${DEFAULT_UG_NAME}
-
-# Set the working directory
-WORKDIR /data
-
-# Create a new system group and a new system user with the specified UID, GID, and username.
-RUN <<EOF
-addgroup --system --gid ${GROUP_GID} ${UG_NAME}
-adduser --system --disabled-password --no-create-home \
-    --uid ${USER_UID} --ingroup ${UG_NAME} ${UG_NAME}
-EOF
+FROM greenukr/updater:0.1.0
 
 # Install required tools
 RUN <<EOF 
 apk update
-apk upgrade --no-cache
 apk --no-cache add \
     qemu-system-aarch64 \
-    iproute2 net-tools lsof
+    iproute2 net-tools lsof \
+    openssh-client busybox-extras qemu-img
 rm -rf /var/cache/apk/*
 EOF
 
 # Expose port 2222 for SSH
 EXPOSE 2222
 
-USER ${UGNAME}
+USER ${UG_NAME}
 
 ENTRYPOINT ["qemu-system-aarch64"]
 
