--- a/rpi3/.env
+++ b/rpi3/.env
@@ -2,9 +2,8 @@
 USER_UID=1000
 GROUP_GID=1000
 UG_NAME=nonroot
-# Also may be used as DEFAULT_IMAGE_URL at buld 
+# Also may be used as DEFAULT_IMAGE_URL at build 
 IMAGE_URL=https://downloads.raspberrypi.com/raspios_lite_arm64/images/raspios_lite_arm64-2023-05-03/2023-05-03-raspios-bullseye-arm64-lite.img.xz
-# SD_NAME=sd.qcow2
 SD_SIZE=4
 SD_NAME=sd.img
 DTB_FILE=bcm2710-rpi-3-b-plus.dtb
