--- a/venus/emulator/Dockerfile.emulator
+++ b/venus/emulator/Dockerfile.emulator
@@ -4,6 +4,7 @@ FROM greenukr/updater:0.1.0
 RUN <<EOF 
 apk update
 apk --no-cache add \
+    # qemu-system-arm \
     qemu-system-arm \
     iproute2 net-tools lsof \
     openssh-client busybox-extras qemu-img
